--- a/app/src/main/res/menu/item_and_search_menu.xml
+++ b/app/src/main/res/menu/item_and_search_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/menu_search_bar"
         android:actionViewClass="android.widget.SearchView"
-        android:icon="@android:drawable/ic_search_category_default"
+        android:icon="@mipmap/ic_search_foreground"
         android:title="search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always"
